# rayTracer

./: CMakeLists.txt
include/: box.hpp  constants.hpp  cylinder.hpp  kdnode.hpp  object.hpp  parser.hpp  plane.hpp  ray.hpp  sphere.hpp  vec3.hpp
libs/: libgomp.so.1
scenes/: cylinders  debug  diffusion  diffusion2  mirrors  objects  refraction  spheres
src/: box.cpp  cylinder.cpp  main.cpp  object.cpp  plane.cpp  ray.cpp  sphere.cpp  vec3.cpp
tests/: test_raytracer.cpp
